# ollivanders

./: .gitignore  pyproject.toml  setup.cfg
source/: conf.py  index.rst
source/ollivanders/: activations.py
source/ollivanders/activation/: activation.py  tanh.py
source/ollivanders/layer/: linear.py
src/olivanders/: activations.py  layers.py  losses.py
src/olivanders/activation/: activation.py  tanh.py
src/olivanders/layer/: dense.py
src/ollivanders/: layers.py
src/ollivanders/activation/: activation.py
src/ollivanders/layer/: dense.py  layer.py  linear.py
